Version 14     Live Server Fixes

--Fixed DENIED error when game creator quits while waiting for an opponent and
  somebody joins the stale game before it has been flushed (thanks Josh C).




Version 14     2015-February-6  

--Fixed bug in mousing over uncolored squares that was not properly removing
  that column from the possibility space when computing possible opponent
  scores.

--Improved green score graph behavior when there is only one column left and
  it must be given to your opponent (before, the graph behaved as if your
  opponent didn't know their final column if you hadn't assigned it yet but had
  assigned the final green column, which implies the final red column by
  elimination).




Version 13     2015-February-5

--Added a color blind mode with adjustable color hue shifts (so that color
  blind individuals can tweak their own color settings).

--Fixed to clear last pending flying bet after it is no longer needed (so it
  doesn't show up next round or next game). 

--Changed protocol so that a leaving opponent's remaining chip balance is still
  shown.  Thus, we can compute true house tribute even after opponent leaves.

--Added a musicLoudness setting.

--Changed protocol so that server tells client leave penalty, and client
  displays it to the leaver.

--You can now mouse over uncolored squares, if no pick is pending, and see what
  would happen if you won that square for yourself.  Thus, for example, you
  have the same mouse-over information availble during the current betting
  step that you would have during the next picking step (thanks Jere).

--Moved column picker starting positions out more so that they don't intersect
  with clicked-mouseover-cell column markers.

--Fixed so that DB password isn't leaked in PHP stack traces (thanks Jere).




Version 12     Live Server Fixes

--Fixed precision bug in computing house balance change after tournament
  prizes are paid.
